# idleGenius

./: .gitignore  CMakeLists.txt  README.md  clang_help.txt  compile.sh  gitme.sh  run.sh
.cache/clangd/index/: App.cpp.59069E96D5A951B1.idx  App.hpp.42FF2D85AE3658E2.idx  DBManager.cpp.4261542381D25DED.idx  DBManager.hpp.44EE62D492FE1FD1.idx  GeneratorModel.cpp.A75DC173E487D437.idx  GeneratorModel.hpp.BFFA1F71784A6F28.idx  ProfileModel.cpp.0B090AAC55485CAB.idx  ProfileModel.hpp.F3809C381E966173.idx  Scene.cpp.181E32C9500BF476.idx  Scene.hpp.E78254444EFC16A8.idx  guiStyles.h.C8F87DDF7A940FEE.idx  igcommon.h.DC18ED18A1B05866.idx  main.cpp.79774B928509E622.idx  style_ashes.h.43D3E7F5DC70F1F5.idx  style_bluish.h.FE5E7C317C36A764.idx  style_candy.h.3FF8D2941CCF9E94.idx  style_cherry.h.C4B5C66B8DAEF6A0.idx  style_cyber.h.C7CA4A22802E3B12.idx  style_dark.h.A142879C2FCD2BAE.idx  style_enefete.h.C68F2C9FBEA7ED61.idx  style_jungle.h.1F370A62A4F18303.idx  style_lavanda.h.5F00CE86665C45E8.idx  style_sunny.h.127621CC2F098D62.idx  style_terminal.h.3461EBA723EB856F.idx
db/: app.db
db/cfg/: gamesettings.csv  idlegenerators.csv  upgrades.csv
src/: App.cpp  App.hpp  Scene.cpp  Scene.hpp  common.h  guiStyles.h  igcommon.h  main.cpp
src/dbModels/: DBManager.cpp  DBManager.hpp  GeneratorModel.cpp  GeneratorModel.hpp  ProfileModel.cpp  ProfileModel.hpp
